force-app/main/default/objects/Application__c.object
<CustomObject>
    <description>A parent object for application course preferences, carrying admission application level attributes</description>
    <fields>
        <fullName>ACP_Assessment_Flag_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ACP Assessment Flag Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>API_Request_Message__c</fullName>
        <label>API Request Message</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Response_Body__c</fullName>
        <description>Used to capture the response boy of the payload which calls out to Callista</description>
        <label>API_Response_Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Response_Message__c</fullName>
        <description>API Response Message *not to be made visible to users*</description>
        <label>API Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Response_Status__c</fullName>
        <description>Used to capture the API response status from the Callista callout</description>
        <inlineHelpText>Used to capture the API response status from the Callista callout</inlineHelpText>
        <label>API Response Status</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Access_and_Equity_Question__c</fullName>
        <description>Do you have a disability, mental health or ongoing medical condition that may affect your studies or may prevent you to undertake full-time study?</description>
        <inlineHelpText>Do you have a disability, mental health or ongoing medical condition that may affect your studies or may prevent you to undertake full-time study?</inlineHelpText>
        <label>Access and Equity Question</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Monash_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by custom metadata to determine the Application Fee Amount.</description>
        <label>Active Monash Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admission_Application_Number__c</fullName>
        <label>Admission Application Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_at_submission__c</fullName>
        <formula>IF( NOT( ISBLANK(Birthdate__c) ) , 
IF( DATE( 2000 , MONTH(Birthdate__c) , DAY(Birthdate__c) ) &lt;= DATE( 2000 , MONTH(Submitted_Date__c) , DAY(Submitted_Date__c)), 
YEAR (Submitted_Date__c) - YEAR (Birthdate__c), 
YEAR (Submitted_Date__c) - YEAR (Birthdate__c) -1 ), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age at submission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgentEmailAddress__c</fullName>
        <description>Agency level email address</description>
        <formula>Agent__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgentName__c</fullName>
        <description>The agency name from the agency account record</description>
        <formula>Agent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Accepted_Timestamp__c</fullName>
        <description>AgentPortal : Date and Time the application was accepted by agent</description>
        <label>Agent Accepted (Agent Portal)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agent_Country__c</fullName>
        <description>Agent Country Formula</description>
        <formula>CASESAFEID(Agent__r.Country_Lookup__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Edits_After_Applicant_Acceptance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating edits made by the Agents on the Application after the student accepted the declaration..</description>
        <inlineHelpText>Indicates edits made by the Agent after the Applicant Declaration Accepted</inlineHelpText>
        <label>Agent Edits After Applicant Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Notes__c</fullName>
        <description>Contains Notes/comments from the Agent about the Application. Mainly used in Agent Portal Next Gen (APNG). Details here will be displayed on APNG via SFDC &gt; MIX &gt; GCP integration.</description>
        <inlineHelpText>Notes/comments from the Agent</inlineHelpText>
        <label>Agent Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Org_Unit_Code__c</fullName>
        <description>The SAP/Callista key for this Agency</description>
        <label>Agency Org Unit Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Staff_Details__c</fullName>
        <description>Agent Staff Details such as contact number and other info</description>
        <label>Agent Staff Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Staff_Email__c</fullName>
        <description>Agent&apos;s additional email if any</description>
        <label>Agent Staff Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup to the Agency account</description>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Agent__c</fullName>
        <description>If applicant has an agent</description>
        <label>Applicant Agent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Email_Address__c</fullName>
        <label>Applicant Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <formula>Applicant__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Privacy_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant Privacy Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Lookup to the contact record of the Applicant</description>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicants_Email__c</fullName>
        <description>This is the Applicant&apos;s email address</description>
        <formula>Applicant__r.Email</formula>
        <label>Applicant&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <formula>Callista_Application_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Intake__c</fullName>
        <label>Intake</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Win</fullName>
                </value>
                <value>
                    <fullName>Spr</fullName>
                </value>
                <value>
                    <fullName>MO1</fullName>
                </value>
                <value>
                    <fullName>MO2</fullName>
                </value>
                <value>
                    <fullName>MO3</fullName>
                </value>
                <value>
                    <fullName>MO4</fullName>
                </value>
                <value>
                    <fullName>MO5</fullName>
                </value>
                <value>
                    <fullName>MO6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>This field identified whether the application is default or the Pathway application</description>
        <inlineHelpText>This field identified whether the application is default or the Pathway application</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Pathway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applied_For_Permanent_Residency__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR applied for permanent residency for Malaysia, Indonesia, Indonesia PR and Other Nationalities residency status</description>
        <label>Applied For Permanent Residency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apply_for_Equity_Scholarship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GRT apply for equity scholarship. Used to determine if equity scholarship application document need to be uploaded</description>
        <label>Apply for Equity Scholarship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applying_for_Credit__c</fullName>
        <label>Applying for Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Checklist_Version__c</fullName>
        <description>Assessment checklist version which the application is using.</description>
        <label>Assessment Checklist Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment Version 1</fullName>
                </value>
                <value>
                    <fullName>Assessment Version 2</fullName>
                </value>
                <value>
                    <fullName>Assessment Version 3</fullName>
                </value>
                <value>
                    <fullName>Assessment Version 4</fullName>
                </value>
                <value>
                    <fullName>Assessment Version 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Status__c</fullName>
        <description>Track the assessment process once an application is submitted by the applicant</description>
        <inlineHelpText>Track the assessment process once an application is submitted by the applicant</inlineHelpText>
        <label>Assessment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Australian_Immigration_Office_Issued__c</fullName>
        <description>Indicates which Australian immigration office issued the visa to the applicant</description>
        <inlineHelpText>Which Australian Immigration Office issued your visa?</inlineHelpText>
        <label>Australian Immigration Office Issued</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <formula>Applicant__r.Birthdate</formula>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Breached_visa_condition__c</fullName>
        <description>Indicates if the applicant has breached visa conditions in the past.</description>
        <inlineHelpText>Have you breached any visa conditions in any country?</inlineHelpText>
        <label>Breached visa condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Callista_Applicant_Id__c</fullName>
        <externalId>true</externalId>
        <label>Callista Applicant Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Application_Id__c</fullName>
        <externalId>true</externalId>
        <label>Callista Application Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Callista_Student_Id__c</fullName>
        <description>Formula field, deriving the value from the applicant record itself</description>
        <formula>Applicant__r.Person_ID_unique__c</formula>
        <label>Applicant Student ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Location__c</fullName>
        <description>This is used by Custom metadata to determine the Application fee amount</description>
        <label>Campus Location Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                    <isActive>false</isActive>
                    <label>South Africa</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Used to capture the campus that the user is applying to</description>
        <inlineHelpText>Used to capture the campus that the user is applying to</inlineHelpText>
        <label>Campus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID - Application</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Admission Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PG-CSP</fullName>
                </value>
                <value>
                    <fullName>PG-FEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_Ad_Hoc_Email_Status__c</fullName>
        <description>This field is used to notify Marketing Cloud to send the ad hoc checklist email</description>
        <inlineHelpText>Indicate the status of Ad Hoc Checklist Email</inlineHelpText>
        <label>Checklist Ad Hoc Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Send to MC</fullName>
                </value>
                <value>
                    <fullName>Email Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_output__c</fullName>
        <description>Allows for the storage of the Application Checklist Output which is then consumed by marketing cloud. This should not be edited directly.</description>
        <inlineHelpText>Allows for the storage of the Application Checklist Output which is then consumed by marketing cloud. This should not be edited directly.</inlineHelpText>
        <label>Checklist output</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Checklist_output_completed__c</fullName>
        <description>Allows for the storage of the Application Checklist Output which is then consumed by marketing cloud. This should not be edited directly.</description>
        <inlineHelpText>Allows for the storage of the Application Checklist Output which is then consumed by marketing cloud. This should not be edited directly.</inlineHelpText>
        <label>Checklist output completed</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Citizenship_Classification__c</fullName>
        <description>Citizenship Classification based on Residency Status and Campus Location (Application fields) 

Please refer to the table here:
https://confluence.apps.monash.edu/pages/viewpage.action?spaceKey=SF&amp;title=Citizenship+Classification+Multi+Campus</description>
        <formula>IF(ISPICKVAL(Type_of_Study__c, &apos;Graduate Research&apos;),
	IF(ISPICKVAL(Campus_Location__c, &apos;Australia&apos;),
		IF(OR(TEXT(Residency_Status__c)=&apos;DOM-AUS&apos;,TEXT(Residency_Status__c)=&apos;DOM-NZ&apos;,TEXT(Residency_Status__c)=&apos;DOM-PR&apos;),
			&apos;Domestic&apos;,
			IF(OR(TEXT(Residency_Status__c)=&apos;DOM-SUN&apos;,TEXT(Residency_Status__c)=&apos;DOM-IDN&apos;,TEXT(Residency_Status__c)=&apos;DOM-IDN-PR&apos;,TEXT(Residency_Status__c)=&apos;INTRNTNL&apos;),
			&apos;International&apos;,
			&apos;NA&apos;)
		),
		IF(ISPICKVAL(Campus_Location__c, &apos;Malaysia&apos;),
			IF(TEXT(Residency_Status__c)=&apos;DOM-SUN&apos;,
				&apos;Domestic&apos;,
				IF(OR(TEXT(Residency_Status__c)=&apos;DOM-AUS&apos;,TEXT(Residency_Status__c)=&apos;DOM-NZ&apos;,TEXT(Residency_Status__c)=&apos;DOM-PR&apos;,TEXT(Residency_Status__c)=&apos;INTRNTNL&apos;),
					&apos;International&apos;,
					&apos;NA&apos;)
			),
			IF(ISPICKVAL(Campus_Location__c, &apos;Indonesia&apos;),
				IF(OR(TEXT(Residency_Status__c)=&apos;DOM-IDN&apos;, TEXT(Residency_Status__c)=&apos;DOM-IDN-PR&apos;),
					&apos;Domestic&apos;,
					IF(OR(TEXT(Residency_Status__c)=&apos;DOM-AUS&apos;,TEXT(Residency_Status__c)=&apos;DOM-NZ&apos;,TEXT(Residency_Status__c)=&apos;DOM-PR&apos;,TEXT(Residency_Status__c)=&apos;INTRNTNL&apos;),
						&apos;International&apos;,
						&apos;NA&apos;
					)
				),
				&apos;NA&apos;
			)
		)
	)
	,
	IF(ISPICKVAL(Campus_Location__c, &apos;Australia&apos;),
		IF(OR(TEXT(Residency_Status__c)=&apos;DOM-AUS&apos;,TEXT(Residency_Status__c)=&apos;DOM-NZ&apos;,TEXT(Residency_Status__c)=&apos;DOM-PR&apos;,TEXT(Residency_Status__c)=&apos;DOM-HV&apos;),
			&apos;Domestic&apos;,
			IF(OR(TEXT(Residency_Status__c)=&apos;INTRNTNL&apos;,TEXT(Residency_Status__c)=&apos;INT-TEP&apos;),
				&apos;International&apos;,
				&apos;NA&apos;)
		),
		IF(ISPICKVAL(Campus_Location__c, &apos;Malaysia&apos;),
			IF(TEXT(Residency_Status__c)=&apos;DOM-SUN&apos;,
				&apos;Domestic&apos;,
				IF(OR(TEXT(Residency_Status__c)=&apos;INT-SUN-P&apos;,TEXT(Residency_Status__c)=&apos;INT-SUN&apos;),
					&apos;International&apos;,
					&apos;NA&apos;)
			),

			IF(ISPICKVAL(Campus_Location__c, &apos;South Africa&apos;),
				IF(TEXT(Residency_Status__c)=&apos;DOM-SA&apos;,
					&apos;Domestic&apos;,
					IF(TEXT(Residency_Status__c)=&apos;INT-SA&apos;,
						&apos;International&apos;,
						&apos;NA&apos;
					)
				),
				IF(ISPICKVAL(Campus_Location__c, &apos;Indonesia&apos;),
					IF(OR(TEXT(Residency_Status__c)=&apos;DOM-IDN&apos;, TEXT(Residency_Status__c)=&apos;DOM-IDN-PR&apos;),
						&apos;Domestic&apos;,
						IF(OR(TEXT(Residency_Status__c)=&apos;INT-IDN-P&apos;, TEXT(Residency_Status__c)=&apos;INT-IDN&apos;),
							&apos;International&apos;,
							&apos;NA&apos;
						)
					),
					&apos;NA&apos;
				)
			)
		)
	)
)</formula>
        <inlineHelpText>a formula field that holds the Citizenship Classification based on Residency Status and Campus Location</inlineHelpText>
        <label>Citizenship Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Citizenship Country</label>
        <referenceTo>Country_Attribute__c</referenceTo>
        <relationshipLabel>Applications (Citizenship Country)</relationshipLabel>
        <relationshipName>ApplicationsCitizenship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Citizenship_Type_Filter__c</fullName>
        <formula>TEXT(Applicant__r.Residency_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Citizenship Type Filter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Convicted_of_crime_offence__c</fullName>
        <description>Indicates if the applicant has been convicted of any crime or offence in any country.</description>
        <inlineHelpText>Have you been convicted of any crime or offence in any country?</inlineHelpText>
        <label>Convicted of crime/offence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Intention__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Intention</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criminal_History_Opt_In__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>To capture consent of the applicant on providing Criminal History</description>
        <inlineHelpText>Applicant consent to provide consent on Criminal History</inlineHelpText>
        <label>Criminal History Opt In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currently_residing_in_Malaysia__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HDR currently residing in Malaysia</description>
        <label>Currently residing in Malaysia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Validation_Errors__c</fullName>
        <label>Data Validation Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Declaration_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Declaration Accepted (MyApp)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Declaration_Text__c</fullName>
        <description>My App graduate research Declaration Text</description>
        <label>Declaration Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Delegator_Org_Unit_Code__c</fullName>
        <description>The Org Unit code of the &quot;Delegator Account&quot;. Once the application reaches a certain status, the Application will be &quot;transferred&quot; to this account. This is mainly used when another external agency (delegate) will manage the start of an Application.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Org Unit code of the &quot;Delegator Account&quot;. Once the application reaches a certain status, the Application will be &quot;transferred&quot; to this account</inlineHelpText>
        <label>Delegator Org Unit Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_Opt_In__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Disability Opt in - To take consent for taking disability information from the Applicant.</description>
        <inlineHelpText>Consent of the applicant on providing disability information</inlineHelpText>
        <label>Disability Opt In</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Distance_Learning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by custom metadata to determine the Application fee amount.</description>
        <label>Distance Learning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check_Outcome__c</fullName>
        <description>Outcome of a Duplicate Check Task, to be updated by users</description>
        <label>Duplicate Check Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merged Successfully</fullName>
                </value>
                <value>
                    <fullName>Not a Match</fullName>
                </value>
                <value>
                    <fullName>Pending merge by Administrator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Duration_of_Study__c</fullName>
        <label>Duration of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>One Semester</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Two Semester</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Embargoed_Reason__c</fullName>
        <description>A potentially &apos;;&apos; delimited field that rolls up (via DLRS) ACP embargoed reasons. Very little chance of an Application being embargoed for multiple reasons but it is catered for.

Initial use is to indicate VTAC applications and allow them to be permanently blocked from APNG access.</description>
        <inlineHelpText>Unique list of embargoed reasons from ACPs</inlineHelpText>
        <label>Embargoed Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>English_Entry_Mode__c</fullName>
        <description>The user enters these field manually as part of Minimum English Check</description>
        <label>English Entry Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Country of secondary schooling / graduation</fullName>
                </value>
                <value>
                    <fullName>English Language Instruction in secondary school / university</fullName>
                </value>
                <value>
                    <fullName>Satisfactory English Test Result</fullName>
                </value>
                <value>
                    <fullName>Monash English Offer Eligibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Language_Proficiency__c</fullName>
        <description>Field is required to hold the information whether the applicant has completed at least six years of schooling in an English medium institution in an English-speaking country prior to the age of 19.

Policy details: https://www.monash.edu/admissions/entry-requirements/english-language</description>
        <inlineHelpText>Have you completed at least six (6) years of schooling in an English-speaking country where you were taught in English prior to the age of 19?</inlineHelpText>
        <label>6yr English schooling under 19</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Proficiency_Requirement__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>English Proficiency requirements.Indicates how the English proficiency requirement is satisfied.</description>
        <label>English Proficiency Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TEST-DONE</fullName>
                    <label>I have completed a Monash approved English test</label>
                </value>
                <value>
                    <fullName>TEST-TODO</fullName>
                    <label>I will complete a Monash approved English test</label>
                </value>
                <value>
                    <fullName>NO-TEST</fullName>
                    <label>I will not complete a Monash approved English test</label>
                </value>
                <value>
                    <fullName>ENG-12YEAR</fullName>
                    <isActive>false</isActive>
                    <label>I have completed an English subject (Australian Year 12 equivalent) during a senior secondary qualification or foundation program</label>
                </value>
                <value>
                    <fullName>MONASH-OS</fullName>
                    <isActive>false</isActive>
                    <label>I have completed half a year of full-time study (24 Monash credit points) at a Monash University campus</label>
                </value>
                <value>
                    <fullName>ENG-STUDY</fullName>
                    <isActive>false</isActive>
                    <label>I have completed half a year of full-time study (equivalent to 24 Monash credit points) at diploma level or higher at an institution where English is solely the language of instruction</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>English_Program_Consideration__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>If English test does not meet the minimum English language requirements for preferred course</description>
        <inlineHelpText>If the English test doesn’t meet the course’s language requirements.</inlineHelpText>
        <label>English Program Consideration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enquiry_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enquiry Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>